# ccmux

./: CLAUDE.md  Cargo.toml  README.md  feedback.md  prd.md  prompt.md  ralph.sh
docs/superpowers/plans/: 2026-03-27-preview-overhaul.md  2026-03-27-transcript-tailing.md
docs/superpowers/specs/: 2026-03-27-preview-overhaul-design.md  2026-03-27-transcript-tailing-design.md
src/: dashboard.rs  emit.rs  init.rs  main.rs  registry.rs  transcript.rs  zellij.rs
src/ui/: kanban.rs  mod.rs  modal.rs  preview.rs  statusbar.rs
